[gd_scene load_steps=9 format=3 uid="uid://6e6rkceymrxy"]

[ext_resource type="Script" uid="uid://det8w80ts5qm8" path="res://Games/Snake/SnakeBoard.gd" id="1_vn6nx"]
[ext_resource type="Script" uid="uid://rqcrafnl1ub1" path="res://Games/Snake/SnakeLabel.gd" id="2_36w75"]
[ext_resource type="Script" uid="uid://cvxcqhf0g1uhd" path="res://Games/Snake/SnakeBestScoreLabel.gd" id="3_3qlc5"]
[ext_resource type="Script" uid="uid://d05cq0k5yj2fc" path="res://Games/Snake/SnakeGameOver.gd" id="3_fyb7g"]

[sub_resource type="Gradient" id="Gradient_lott4"]
colors = PackedColorArray(0, 0.745098, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d3c20"]
gradient = SubResource("Gradient_lott4")
width = 1152
height = 648
fill_from = Vector2(0.204128, 0.611621)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_sbx2e"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mt1rj"]
gradient = SubResource("Gradient_sbx2e")
width = 68
height = 32

[node name="SnakeScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_d3c20")
centered = false

[node name="Board" type="Sprite2D" parent="Background"]
texture_filter = 1
position = Vector2(576, 281)
scale = Vector2(16, 16)
texture = SubResource("GradientTexture2D_mt1rj")
script = ExtResource("1_vn6nx")

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_fyb7g")

[node name="GameOverLabel" type="RichTextLabel" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -166.0
offset_right = 204.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Game Over!"

[node name="RestartButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -49.0
offset_right = 197.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Play again"

[node name="ScoreLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -101.0
offset_right = 440.0
offset_bottom = -11.0
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 64
text = "Score: 0"
script = ExtResource("2_36w75")

[node name="BestScoreLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -100.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/italics_font_size = 64
theme_override_font_sizes/mono_font_size = 64
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
text = "Best: 0"
script = ExtResource("3_3qlc5")

[connection signal="game_ended" from="Background/Board" to="GameOver" method="_on_board_game_ended"]
[connection signal="game_ended" from="Background/Board" to="BestScoreLabel" method="_on_board_game_ended"]
[connection signal="score_updated" from="Background/Board" to="ScoreLabel" method="_on_board_score_updated"]
[connection signal="new_game_should_start" from="GameOver" to="Background/Board" method="_on_play_button_pressed"]
[connection signal="pressed" from="GameOver/RestartButton" to="GameOver" method="_on_button_pressed"]
[connection signal="pressed" from="GameOver/RestartButton" to="BestScoreLabel" method="_on_restart_button_pressed"]
